--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quality Education</title>
-    <link rel="stylesheet" href="Source/Styles/style.css">
+    <link rel="stylesheet" href="Source/styles/style.css">
 </head>
 <body>
     <div class="quality-education-container">
@@ -31,4 +31,5 @@
 
     </div>
 </body>
+
 </html>
